--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentful": "^11.4.1",
+    "contentful-management": "^11.40.4",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^16.4.7",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
