--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.1.0",
+    "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.3.0"
   }
 }
